fix scrollbar of the lyric page on Firefox

--- a/css/common.css
+++ b/css/common.css
@@ -691,7 +691,7 @@ svg {
   flex: 0 0 380px;
   overflow-y: scroll;
   color: var(--lyric-default-color);
-  scrollbar-width: auto;
+  scrollbar-width: thin;
   scrollbar-color: var(--scroll-color) transparent;
   font-size: var(--lyric-font-size);
 }
